// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card Card with image renders as expected 1`] = `
<a
  className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
  href="url"
>
  <div
    className="relative h120 mb6"
  >
    <div
      className="relative h120 mb12"
      style={
        Object {
          "backgroundImage": "url('https://i.giphy.com/media/A9lgUYVqLeRb2/giphy.gif')",
          "backgroundPosition": "center",
          "backgroundSize": "100% auto",
        }
      }
    />
  </div>
  <div>
    
    <div
      className="mb6"
    >
      Title
    </div>
    <div
      className="color-gray color-gray-on-hover"
    >
      described.
    </div>
  </div>
</a>
`;

exports[`card Card with level and language renders as expected 1`] = `
<a
  className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
  href="url"
>
  
  <div>
    <div
      className="mb6"
    >
      <div
        className="inline-block mr18 txt-s txt-bold"
      >
        <div
          className="flex-parent flex-parent--center-cross"
        >
          <div
            className="inline-block w6 bg-orange align-middle mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="inline-block w6 bg-orange align-middle mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="inline-block w6 bg-gray-light align-middle mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="inline-block color-orange ml3 txt-capitalize"
          >
            intermediate
          </div>
        </div>
      </div>
      <div
        className="inline-block color-gray txt-s txt-bold"
      >
        <svg
          className="events-none icon inline-block align-t"
          focusable="false"
          role="presentation"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-code"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
         
        JavaScript
      </div>
    </div>
    <div
      className="mb6"
    >
      This is a full-length title
    </div>
    <div
      className="color-gray color-gray-on-hover"
    >
      Here's a reasonable length for a description.
    </div>
  </div>
</a>
`;

exports[`card Card with no image renders as expected 1`] = `
<a
  className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
  href="url"
>
  
  <div>
    
    <div
      className="mb6"
    >
      Title
    </div>
    <div
      className="color-gray color-gray-on-hover"
    >
      described.
    </div>
  </div>
</a>
`;
